<resources>
    <string name="app_name">FACTURA</string>
    <string name="det_org">Detalles de la organización</string>
    <string name="name_org">Nombre de la organización</string>
    <string name="save_data_org">Guardar</string>

    <string name="app_nam">Factura</string>
    <string name="app_name_des">Factura App</string>
    <string name="navigation_drawer_open">Factura</string>
    <string name="navigation_drawer_close">Factura</string>
    <string name="nav_header_title">Factura App</string>
    <string name="nav_header_subtitle">nkjojhnjkh.web.app.developer@gmail.com</string>
    <string name="nav_header_desc">Partes Trabajo</string>
    <string name="action_settings">Partes Trabajo</string>


    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="client">Lista de clientes</string>
    <string name="list_work">Lista de partes</string>
    <string name="json">Exportar</string>
    <string name="clientAdd">Añadir un cliente</string>
    <string name="comment">Tu comentario, opinión</string>
    <string name="share">Compartir / Descargar</string>
    <string name="nombre">Nombre</string>
    <string name="addNewClient">Añadir nuevo cliente</string>
    <string name="telefono">Telefono</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar cliente</string>
    <string name="update">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="clientSaved">guardado en la base de datos</string>
    <string name="error">Error al guadar</string>
    <string name="imageSaved">Guardado</string>
    <string name="imageSavedError">No guardado</string>
    <string name="partSave">\n Registro guardado \n</string>
    <string name="partSaveError">Error al guardar el registro</string>
    <string name="thereArentAnyClientYeat">No hay ningún cliente todavía</string>
    <string name="name">"Nombre: "</string>
    <string name="create_part">Crear un parte</string>
    <string name="call">LLamar</string>
    <string name="createNewPart">Crear un parte nuevo</string>
    <string name="update_client">Modificar los datos del cliente</string>
    <string name="client_modified">Datos del cliente modificados</string>
    <string name="delete_client">Eliminar el cliente</string>
    <string name="are_sure">¿ Estás seguro ?</string>
    <string name="yes">SI</string>
    <string name="client_deleted">Cliente eleminado</string>
    <string name="date">Fecha</string>
    <string name="startTimePart">Hora de inicio:</string>
    <string name="timeStartPart">Hora de inicio</string>
    <string name="timeFinishPart">Tiempo de finalizacion:</string>
    <string name="workPart">Trabajo ejecutado:</string>
    <string name="pricePart">Precio:</string>
    <string name="autoPart">Autorizado por:</string>
    <string name="updatePart">"Modificar "</string>
    <string name="delete_signature">Eliminar la firma</string>
    <string name="save_signature">Aceptar y guardar</string>
    <string name="signature_deleted">La firma ha sido borrada</string>
    <string name="firma_no_encontada">La firma no encontrada para eliminar, puede ser que ya ha sido borrada</string>
    <string name="sign_accept">La firma ha sido guadada</string>
    <string name="name_client">Nombre del cliente:</string>
    <string name="listOfPart">Lista de partes</string>
    <string name="numero">Numero</string>
    <string name="sent_part">Enviar el informe</string>
    <string name="change_part">Editar el informe</string>
    <string name="delete_part">Eliminar el informe</string>
    <string name="are_you_sure">¿ Estas seguro ?</string>
    <string name="inter_message">Selección : </string>
    <string name="part_deleted">Informe iliminado</string>
    <string name="creating_archive_for_send">Creando archivo para él envió</string>
    <string name="number">Numero :</string>
    <string name="fecha">Fecha</string>
    <string name="time_work">Tiempo de funcionamiento</string>
    <string name="work_executed">El trabajo realizado:</string>
    <string name="in_total">En total:</string>
    <string name="autorization">"Autorizado por: "</string>
    <string name="noListPart">Aun no hay ningin parte...</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://diseno-web-cantabria.web.app/.well-known/assetlinks.json\" }]</string>


    <string name="your_name">Tu nombre</string>
    <string name="address">Dirección</string>
    <string name="company_address">Dirección de la empresa</string>
    <string name="city">Ciudad</string>
    <string name="state">Provincia</string>
    <string name="country">Pais</string>
    <string name="zip">Codigo postal</string>
    <string name="create_invoice">Crear Factura</string>
    <string name="client_details">Detalles del cliente</string>
    <string name="invoice_details">Detalles de la factura</string>
    <string name="invoice">Factura #</string>
    <string name="invoice_date">Fecha de la factura</string>
    <string name="item_details">Detalles del artículo</string>
    <string name="add_line_item">Añadir un artículo en línea</string>
    <string name="total_summary">Resumen total</string>
    <string name="subtotal">Subtotal</string>
    <string name="subtotal_00">0.00</string>
    <string name="iva">"IVA %"</string>
    <string name="iva_00">0.00</string>
    <string name="total">Total</string>
    <string name="other_detalles">Otros detalles</string>
    <string name="notes">Nota</string>
    <string name="terms_and_conditions">Términos y condiciones</string>
    <string name="organization_details">Detalles de la organización</string>
    <string name="clear_all_items">Eliminar elementos</string>
    <string name="item_name_description">Nombre del artículo/Descripción</string>
    <string name="quantity">Cantidad</string>
    <string name="unit_cost">Costo unitario</string>
    <string name="date_saved">Datos guardados</string>
    <string name="client_company_name">Nombre del cliente</string>
    <string name="bill_to">Cobrar a </string>
    <string name="address_client">Dirección del cliente</string>
    <string name="client_data">Datos del cliente</string>
    <string name="title_builder">¿Eliminar datos del cliente?</string>
    <string name="no">NO</string>
    <string name="si">SI</string>
    <string name="delete_one">¿Eliminar artículo?</string>
    <string name="delete_article">¿Eliminar artículos?</string>
    <string name="iva_21">21</string>
    <string name="eu">€</string>
    <string name="no_have_aarticle_items">Aún no tienes artículos. \n Crea un articulo para crear factura.</string>
    <string name="download">Descargar</string>
    <string name="item_detail">Detalles de los artículos</string>
    <string name="total_amount">Cantidad total</string>
    <string name="iva_m">IVA</string>
    <string name="bT">Cobrar a: </string>
    <string name="app_name_small">Factura #</string>
    <string name="item_description">Descripción del Artículo</string>
    <string name="cant">Unid</string>
    <string name="price">Precio</string>
    <string name="amount">Cantidad</string>
    <string name="subtotalName">Subtotal</string>
    <string name="share_app">Compartir</string>
    <string name="evaluate">Valorame</string>
    <string name="web">Pagina web</string>
    <string name="more">Mas</string>

</resources>
