<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyOrganizationsDetails"
    android:backgroundTint="@android:color/white">

    <androidx.cardview.widget.CardView
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="@android:color/white"
        app:cardElevation="5dp"
        android:clickable="false"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="11dp"
                android:textSize="18sp"
                android:text="@string/name_org"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/name_org"
                android:layout_marginEnd="11dp"
                android:layout_marginStart="11dp"
                android:padding="11dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints=""
                tools:ignore="LabelFor" />
            <TextView
                android:layout_marginTop="22dp"
                android:padding="11dp"
                android:textSize="18sp"
                android:text="@string/your_name"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:maxLines="5"
                android:autofillHints=""
                tools:ignore="LabelFor"
                android:inputType="textMultiLine"
                android:id="@+id/your_name"
                android:layout_marginEnd="11dp"
                android:layout_marginStart="11dp"
                android:padding="11dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="22dp"
                android:padding="11dp"
                android:textSize="18sp"
                android:text="@string/address"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:maxLines="5"
                android:inputType="textMultiLine"
                android:autofillHints=""
                tools:ignore="LabelFor"
                android:id="@+id/company_address"
                android:hint="@string/company_address"
                android:layout_marginEnd="11dp"
                android:layout_marginStart="11dp"
                android:padding="11dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginTop="32dp"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/city"
                    android:inputType="text"
                    android:autofillHints=""
                    tools:ignore="LabelFor"
                    android:layout_weight="1"
                    android:hint="@string/city"
                    android:layout_marginEnd="11dp"
                    android:layout_marginStart="11dp"
                    android:padding="11dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/state"
                    android:inputType="text"
                    android:autofillHints=""
                    tools:ignore="LabelFor"
                    android:layout_weight="1"
                    android:hint="@string/state"
                    android:layout_marginEnd="11dp"
                    android:layout_marginStart="11dp"
                    android:padding="11dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="32dp"
                android:layout_marginTop="32dp"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/country"
                    android:inputType="text"
                    android:autofillHints=""
                    tools:ignore="LabelFor"
                    android:layout_weight="1"
                    android:hint="@string/country"
                    android:layout_marginEnd="11dp"
                    android:layout_marginStart="11dp"
                    android:padding="11dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <EditText

                    android:id="@+id/zip"
                    android:inputType="text"
                    android:autofillHints=""
                    tools:ignore="LabelFor"
                    android:layout_weight="1"
                    android:hint="@string/zip"
                    android:layout_marginEnd="11dp"
                    android:layout_marginStart="11dp"
                    android:padding="11dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>