<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateInvoice">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardElevation="5dp"
            android:clickable="false"
            android:focusable="false"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:layout_marginTop="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/go_to_client_details"
                    android:drawableEnd="@drawable/set_icon"
                    android:background="@color/colorPrimary"
                    android:textSize="17sp"
                    android:padding="7dp"
                    android:textColor="@color/white"
                    android:text="@string/client_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/top_client"
                    android:textSize="14sp"
                    android:padding="11dp"
                    android:textColor="@color/black"
                    android:text="@string/client_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/mid_client"
                    android:textSize="14sp"
                    android:padding="11dp"
                    android:textColor="@color/black"
                    android:text="@string/client_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardElevation="5dp"
            android:clickable="false"
            android:focusable="false"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:layout_marginTop="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:background="@color/colorPrimary"
                    android:textSize="17sp"
                    android:padding="7dp"
                    android:textColor="@color/white"
                    android:text="@string/invoice_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:padding="11dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/invoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/invoice_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginEnd="11dp"
                    android:autofillHints=""
                    android:inputType="textMultiLine"
                    android:maxLines="7"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:textSize="17sp"
                    android:padding="11dp"
                    android:textColor="@color/black"
                    android:text="@string/invoice_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/invoice_data"
                    tools:ignore="LabelFor"
                    android:inputType="textMultiLine"
                    android:maxLines="7"
                    android:layout_marginBottom="11dp"
                    android:layout_marginStart="11dp"
                    android:layout_marginEnd="11dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardElevation="5dp"
            android:clickable="false"
            android:focusable="false"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:layout_marginTop="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                    <TextView
                        android:background="@color/colorPrimary"
                        android:textSize="17sp"
                        android:padding="7dp"
                        android:textColor="@color/white"
                        android:text="@string/item_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="11dp"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:padding="7dp">
                    <TextView
                        android:id="@+id/clear_all_items"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/clear_all_items"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                   <ListView
                       android:dividerHeight="1dp"
                       android:focusable="false"
                       android:clickable="false"
                       android:id="@+id/listView"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       tools:ignore="NestedScrolling" />

                    <LinearLayout
                        android:layout_marginTop="7dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:id="@+id/imageView_add_items"
                            android:padding="11dp"
                            android:contentDescription="@string/app_name"
                            android:layout_width="57dp"
                            android:layout_height="57dp"
                            android:src="@drawable/plus"
                            />
                        <TextView
                            android:textColor="@android:color/black"
                            android:textSize="17sp"
                            android:layout_marginTop="17dp"
                            android:text="@string/add_line_item"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <TextView
                        android:textSize="18sp"
                        android:padding="11dp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/total_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                     <LinearLayout
                         android:weightSum="2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <TextView
                             android:layout_weight="1"
                             android:textSize="17sp"
                             android:padding="11dp"
                             android:textColor="@color/black"
                             android:text="@string/subtotal"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"/>
                         <TextView
                             android:id="@+id/subtotal"
                             android:layout_weight="1"
                             android:textSize="17sp"
                             android:padding="11dp"
                             android:textColor="@color/black"
                             android:text="@string/subtotal_00"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"/>
                     </LinearLayout>
                     <LinearLayout
                         android:weightSum="4"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <TextView
                             android:layout_weight="1"
                             android:textSize="17sp"
                             android:padding="11dp"
                             android:textColor="@color/black"
                             android:text="@string/iva"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"/>
                         <EditText
                             android:layout_marginStart="2dp"
                             android:layout_marginEnd="2dp"
                             android:id="@+id/iva"
                             android:inputType="numberDecimal"
                             android:layout_weight="1"
                             android:textSize="17sp"
                             android:padding="11dp"
                             android:textColor="@color/black"
                             android:text="@string/iva_21"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:autofillHints=""
                             tools:ignore="LabelFor" />
                         <TextView
                             android:id="@+id/iva_result"
                             android:layout_weight="2"
                             android:textSize="17sp"
                             android:padding="11dp"
                             android:textColor="@color/black"
                             android:text="@string/iva_00"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"/>
                     </LinearLayout>
                     <LinearLayout
                         android:weightSum="2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <TextView
                             android:textStyle="bold"
                             android:layout_weight="1"
                             android:textSize="18sp"
                             android:padding="11dp"
                             android:textColor="@color/black"
                             android:text="@string/total"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"/>
                         <TextView
                             android:id="@+id/total"
                             android:textStyle="bold"
                             android:layout_weight="1"
                             android:textSize="18sp"
                             android:padding="11dp"
                             android:textColor="@color/black"
                             android:text="@string/iva_00"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"/>
                     </LinearLayout>
                </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardElevation="5dp"
            android:clickable="false"
            android:focusable="false"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:layout_marginTop="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/other_detalles"
                    android:drawableEnd="@drawable/set_icon"
                    android:background="@color/colorPrimary"
                    android:textSize="17sp"
                    android:padding="7dp"
                    android:textColor="@color/white"
                    android:text="@string/other_detalles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="17sp"
                    android:padding="11dp"
                    android:textColor="@color/black"
                    android:text="@string/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/set_notes"
                    android:layout_marginStart="11dp"
                    android:layout_marginEnd="11dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="17sp"
                    android:padding="11dp"
                    android:textColor="@color/black"
                    android:text="@string/terms_and_conditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/set_term_and_cond"
                    android:layout_marginBottom="11dp"
                    android:layout_marginStart="11dp"
                    android:layout_marginEnd="11dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardElevation="5dp"
            android:clickable="false"
            android:focusable="false"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textView_go_factura"
                    android:drawableEnd="@drawable/set_icon"
                    android:background="@color/colorPrimary"
                    android:textSize="17sp"
                    android:padding="7dp"
                    android:textColor="@color/white"
                    android:text="@string/organization_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:singleLine="true"
                    android:id="@+id/textView_for_company_name"
                    android:textSize="17sp"
                    android:padding="11dp"
                    android:textColor="@color/black"
                    android:text="@string/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:singleLine="true"
                    android:id="@+id/textView_for_company_adress"
                    android:textSize="17sp"
                    android:padding="11dp"
                    android:textColor="@color/black"
                    android:text="@string/terms_and_conditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:singleLine="true"
                    android:id="@+id/textView_for_site_state_country"
                    android:textSize="17sp"
                    android:padding="11dp"
                    android:textColor="@color/black"
                    android:text="@string/terms_and_conditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>